samples/_failures_safe/1761728013_ed885b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41418c6b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_41418c6b.c:167:40: error: expected ‘;’ at end of input
  167 |     for (int i = 0; i < graph->vertices
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_41418c6b.c:167:5: error: expected declaration or statement at end of input
  167 |     for (int i = 0; i < graph->vertices
      |     ^~~
